--- a/thanks.html
+++ b/thanks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jonathan R. Oliveira</title>
+    <link rel="shortcut icon" href="img/icon2.png" type="image/x-icon"><!--ICON-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');/*JetBrains Mono*/
         @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');/*righteous*/
@@ -11,7 +12,7 @@
 
         :root{
             --blue: #002855;
-            --orange: #FF5F05;
+            --aqua: rgb(91, 158, 158);
             --darkBlue: #0F2040;
             --text: "Sarala", sans-serif;
             --title: "Righteous",  sans-serif;
@@ -32,7 +33,7 @@
         }
         h1{
             font-size: 2.5rem;
-            color: var(--orange);
+            color: var(--aqua);
             font-family: var(--title);
             text-shadow: 2px 5px 5px black;
         }
@@ -43,7 +44,7 @@
             text-shadow: 1px 3px 3px black;
         }
         a{
-            color: var(--orange);
+            color: var(--aqua);
             text-decoration: none;
             font-family: var(--component);
             text-shadow: 2px 2px 2px black;
